--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "three": "^0.138.3"
   },
   "devDependencies": {
-    "vite": "^2.8.0"
+    
   },
   "dependencies": {
-    "three": "^0.138.3"
+    "three": "^0.138.3",
+    "vite": "^2.8.0"
+
   }
 }
