--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "main": "main.js",
+  "type":"module",
   "scripts": {
     "start": "node main.js",
     "dev": "vite",
