--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "vite-project",
+  "engines": {
+    "node": "16.8.0",
+    "npm": "8.3.0"
+  },
   "private": true,
   "version": "0.0.0",
   "main": "main.js",
