--- a/package.json
+++ b/package.json
@@ -6,21 +6,25 @@
   },
   "private": true,
   "version": "0.0.0",
-  "main": "main.js",
+  "main": "../dist/main.js",
   "type":"module",
   "scripts": {
     "start": "node main.js",
     "dev": "vite",
-    "build": "vite build",
+    "build": "webpack",
     "preview": "vite preview",
     "three": "^0.138.3"
   },
   "devDependencies": {
-    
-  },
-  "dependencies": {
     "three": "^0.138.3",
-    "vite": "^2.8.0"
-
+    "vite": "^2.8.0",
+    "webpack":"^5.1.3",
+    "webpack-cli": "^4.1.0",
+    "css-loader": "^6.7.1",
+    "style-loader": "^3.3.1"
   }
+  // "dependencies": {
+    
+
+  // }
 }
