--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   "main": "../dist/main.js",
   "type":"module",
   "scripts": {
-    "start": "node main.js",
-    "dev": "vite",
-    "build": "webpack",
-    "preview": "vite preview",
+    "start": "webpack serve --mode development --open",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
     "three": "^0.138.3"
   },
   "devDependencies": {
