--- a/package.json
+++ b/package.json
@@ -6,21 +6,19 @@
   },
   "private": true,
   "version": "0.0.0",
-  "main": "../dist/main.js",
+  "main": "./index.js",
   "type":"module",
   "scripts": {
-    "start": "webpack serve --mode development --open",
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
+    "start": "node index.js",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "three": "^0.138.3"
   },
   "devDependencies": {
     "three": "^0.138.3",
-    "vite": "^2.8.0",
-    "webpack":"^5.1.3",
-    "webpack-cli": "^4.1.0",
-    "css-loader": "^6.7.1",
-    "style-loader": "^3.3.1"
+    "vite": "^2.8.0"
+    
   }
   
 }
