--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "node": "16.8.0",
     "npm": "8.3.0"
   },
+  "type": "module",
   "private": true,
   "version": "0.0.0",
   "main": "./index.js",
