--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start": "node index.js",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
+    "preview": "vite preview"
    
   },
   "devDependencies": {
